<resources>
    <string name="app_name">The Accountant</string>
    <!-- Strings related to Login_Activity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_register">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to CreateAccount -->
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_mail_login">Mail - Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_pass">Confirm password</string>
    <string name="optional">OPTIONAL</string>
    <string name="hint_pseudo">Pseudo</string>
    <string name="hint_address">Address</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="hint_birth">(dd-mm-yyyy)</string>
    <string name="finish">Finish</string>

</resources>
